# usedlang

./: .gitignore  Build.toml  CMakeLists.txt  LICENSE  README.md  file.json
include/: color.h  error.hpp  file.hpp  simdjson_inc.h  terminal.h  threadalgo.hpp
src/: error.cpp  file.cpp  main.cpp  threadalgo.cpp
